# good-enough-hash

./: .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  LLM.md  README.md  pyproject.toml  rust-toolchain.toml
.github/workflows/: buid_wheels.yml
benchmark_results/: latest.csv  latest.json
src/: lib.rs  mphf.rs
src/perfect_hash/: __init__.py  _core.pyi  generation.py
tests/: bench.py  benchmark_matrix.py  test.ipynb  test_hash.py  test_imports.py
