[project]
name = "perfect-hash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "timothee@datapolitics.fr" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
perfect-hash = "perfect_hash:main"

[tool.maturin]
module-name = "perfect_hash._core"
python-packages = ["perfect_hash"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"


# [[tool.uv.index]]
# name = "testpypi"
# url = "https://test.pypi.org/simple/"
# publish-url = "https://test.pypi.org/legacy/"