[project]
name = "perfect-hash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "timothee@datapolitics.fr" }
]
requires-python = ">=3.12"
dependencies = [
    "maturin>=1.7.8",
]

[project.scripts]
perfect-hash = "perfect_hash:main"

[tool.maturin]
module-name = "perfect_hash._core"
python-packages = ["perfect_hash"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.4",
]


# [[tool.uv.index]]
# name = "testpypi"
# url = "https://test.pypi.org/simple/"
# publish-url = "https://test.pypi.org/legacy/"